# gcse-programming-project-django

./: .gitignore  .replit  Aircraft.txt  README.md  pyproject.toml
gcse_programming_project/: manage.py
gcse_programming_project/gcse_programming_project/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
gcse_programming_project/profit_calculator/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
gcse_programming_project/profit_calculator/management/commands/: import.py
gcse_programming_project/profit_calculator/migrations/: 0001_initial.py  0002_alter_flightplan_save_name.py  0002_auto_20210720_1127.py  0002_auto_20210727_1212.py  0003_auto_20210727_1225.py  0004_auto_20210727_1236.py  0005_auto_20210730_1451.py  0006_alter_airportplan_distance.py  0007_auto_20210801_1101.py
gcse_programming_project/profit_calculator/templates/profit_calculator/: aircraftplan_form.html  airportplan_form.html  base.html  base_form.html  clear.html  flightplan_detail.html  index.html  pricingplan_form.html
gcse_programming_project/profit_calculator/templates/profit_calculator/auth/: auth_base.html  change_password.html  login.html  signup.html
gcse_programming_project/profit_calculator/templates/profit_calculator/base/: base.html  base_messages.html  base_navbar.html  navbar.html  no_nav_base.html  standard_base.html
gcse_programming_project/profit_calculator/templates/profit_calculator/forms/: aircraftplan_form.html  airportplan_form.html  base_form.html  pricingplan_form.html
gcse_programming_project/profit_calculator/templatetags/: profit_calculator_extras.py
(+6 files in other folders)
