[tool.poetry]
name = "gcse-programming-project-django"
version = "0.1.0"
description = ""
authors = ["matthew-occleshaw <61629073+matthew-occleshaw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
