[tool.poetry]
name = "gcse-programming-project-django"
version = "0.1.0"
description = ""
authors = ["matthew-occleshaw <61629073+matthew-occleshaw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
django-crispy-forms = "^1.12.0"
crispy-bootstrap5 = "^0.4"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}
waitress = "^2.0.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
